--- a/voluntron/static/style.css
+++ b/voluntron/static/style.css
@@ -1,5 +1,7 @@
-ul.navbar-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: right;
+.navbar-brand, h1, p.jumbotron-desc {
+  font-family: 'Signika Negative';
+}
+
+.navbar-brand, h1 {
+  font-weight: 400 !important;
 }
