--- a/voluntron/templates/auth/login.html
+++ b/voluntron/templates/auth/login.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
+<div class="jumbotron border rounded bg-light container-sm my-4 px-3 py-3">
+  <h1 class="display-5">{% block title %}Log in to your account{% endblock %}</h1>
+  <p class="fs-5 jumbotron-desc">Thank you for giving back to your community.</p>
+</div>
 {% endblock %}
 
 {% block content %}
-  <form method="post">
-    <div class="mb-3">
-      <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
-      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-label" id="password" required>
-    </div>
+<form method="post" class="my-4" style="width: 60vw; margin: auto;">
+  <div class="mb-3">
+    <label for="email" class="form-label">Email</label>
+    <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" required>
+  </div>
+  <div class="mb-3">
+    <label for="password" class="form-label">Password</label>
+    <input type="password" name="password" class="form-control" id="password" required>
+  </div>
 
-    <button type="submit" class="btn btn-primary">Log In</button>
-  </form>
+  <button type="submit" class="btn btn-secondary">Log In</button>
+</form>
 {% endblock %}
