--- a/voluntron/templates/index.html
+++ b/voluntron/templates/index.html
@@ -1,9 +1,18 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<div class="jumbotron border rounded bg-light container-sm my-4 px-3 py-3">
-  <h1 class="display-5">{% block title %}Voluntron{% endblock %}</h1>
-  <p class="fs-5 jumbotron-desc">Voluntron connects those in need to those with the means. No, we're not communists, but we believe in <a class="link-secondary" target="_blank" href="https://www.effectivealtruism.org/">effective altruism</a>, and the power of small contributions from those with privilege to those without.</p>
+<div class="banner">
+  <div class="jumbotron jumbotron-banner container-sm my-4 px-3 py-3 text-light banner">
+    <h1 class="display-5">{% block title %}About Voluntron{% endblock %}</h1>
+    <p class="fs-5 jumbotron-desc">Voluntron connects those in need to those with the means. No, we're not communists,
+      but we believe in <a class="link-light" target="_blank" href="https://www.effectivealtruism.org/">effective
+        altruism</a>, and the healing power of small contributions from those with privilege to those without.</p>
+    {% if g.user %}
+    <a class="btn btn-outline-light my-2" style="width: 120px;" href="{{ url_for('about') }}">Learn More</a>
+    {% else %}
+    <a class="btn btn-outline-light my-2" style="width: 120px;" href="{{ url_for('auth.register') }}">Join us</a>
+    {% endif %}
+  </div>
 </div>
 {% endblock %}
 
