--- a/voluntron/templates/about.html
+++ b/voluntron/templates/about.html
@@ -2,9 +2,14 @@
 
 {% block header %}
 <div class="banner">
-  <div class="jumbotron jumbotron-banner container-sm my-4 px-3 py-3 text-light banner">
+  <div class="banner-img"></div>
+  <div class="jumbotron jumbotron-banner banner-content container-sm my-4 px-3 py-3 text-light banner">
     <h1 class="display-5">{% block title %}Voluntron's Story{% endblock %}</h1>
-    <p class="fs-5 jumbotron-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p class="fs-5 jumbotron-desc">
+      Voluntron is an innovative website developed by a group of motivated high schoolers dedicated to fostering
+      connections and supporting communities, in Canton and around the United States. Our dynamic platform serves
+      as a hub, linking passionate volunteers with individuals seeking help.
+    </p>
     {% if not g.user %}
     <a class="btn btn-outline-light my-2" style="width: 120px;" href="{{ url_for('auth.register') }}">Join us</a>
     {% endif %}
@@ -13,4 +18,61 @@
 {% endblock %}
 
 {% block content %}
-{% endblock %}
+<div class="cards row mt-5 mx-5">
+  <div class="col-lg my-4">
+    <div class="card">
+      <img src="{{ url_for('static', filename='volunteer.jpeg') }}" class="card-img-top" alt="img">
+      <div class="card-body">
+        <h5 class="card-title">For Volunteers</h5>
+        <p class="card-text">
+          Volunteering, charitable work, is an experience everyone benefits from them. People with extra time on their
+          hands, people who feel strongly about being a force for positive change already volunteer, but they don't do
+          it as well as they could. Voluntron connects them with the people who need their help most, creating strong
+          community bonds and more efficiently improving lives.
+        </p>
+        {% if g.user %}
+        <a href="{{ url_for('dashboard.index') }}" class="btn btn-outline-secondary">Dashboard</a>
+        {% else %}
+        <a href="{{ url_for('auth.register') }}" class="btn btn-outline-secondary">Sign Up</a>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg my-4">
+    <div class="card">
+      <img src="{{ url_for('static', filename='voluntee.jpeg') }}" class="card-img-top" alt="img">
+      <div class="card-body">
+        <h5 class="card-title">For Voluntees</h5>
+        <p class="card-text">
+          Everyone needs help from time to time - from homework to filling a pothole to learning English as a refugee,
+          there are so many things to help with. Voluntron allows those in need to find volunteers with the necessary
+          skillset and experience to address their problem most effectively.
+        </p>
+        <form class="d-flex" method="post" action="{{ url_for('search.find') }} ">
+          <input class="form-control me-4" type="text" placeholder="What do you need help with?" style="width: 350px;"
+            name="q">
+          <button class="btn btn-outline-secondary" type="submit">Find a volunteer</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="cards row my-4" style="width: 50%; margin: auto;">
+  <div class="col-md card">
+    <div class="card-body">
+      <h5 class="card-title">Contact Us</h5>
+      <p class="card-text">
+        If you have any concerns about the function or purpose of our site, don't hesitate to let us know.
+        Additionally, if you have any questions or need any support, please reach out.
+      </p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">
+        <a href="mailto:voluntron@gmail.com" class="link-secondary">voluntron@gmail.com</a>
+      </li>
+    </ul>
+  </div>
+
+  {% endblock %}
