--- a/voluntron/templates/auth/login.html
+++ b/voluntron/templates/auth/login.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<div class="banner">
-<div class="jumbotron jumbotron-banner text-light container-sm my-4 px-3 py-3">
-  <h1 class="display-5">{% block title %}Log in to your account{% endblock %}</h1>
-  <p class="fs-5 jumbotron-desc">Thank you for giving back to your community.</p>
-</div>
+<div class="banner short-banner">
+  <dig class="banner-img"></dig>
+  <div class="jumbotron jumbotron-banner banner-content text-light container-sm my-4 px-3 py-3">
+    <h1 class="display-5">{% block title %}Log in to your account{% endblock %}</h1>
+    <p class="fs-5 jumbotron-desc">Thank you for choosing to give back to your community.</p>
+  </div>
 </div>
 {% endblock %}
 
