--- a/voluntron/templates/base.html
+++ b/voluntron/templates/base.html
@@ -16,6 +16,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+  <script src="{{ url_for('static', filename='parallax.js') }}" defer></script>
 </head>
 
 <body>
@@ -23,34 +24,41 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary shadow" style="position: sticky; top: 0;">
     <div class="container-fluid mx-4">
       <a href="{{ url_for('index') }}" class="navbar-logo me-5">
-        <img src="{{ url_for('static', filename='voluntron-logo.png') }}" alt="Voluntron" width="200px">
+        <img src="{{ url_for('static', filename='voluntron-logo.png') }}" alt="Voluntron" height="50px">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          {% if g.user %}
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link me-2" href="{{ url_for('dashboard') }}">Dashboard</a></li>
-          </ul>
-          <ul class="navbar-nav mw-auto">
-            <li class="nav-item mw-5"><a href="" class="nav-link">{{ g.user['name'] }}</a></li>
-            <li class="nav-item mw-5"><a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a></li>
-          </ul>
-          {% else %}
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <form class="d-flex" role="search">
-              <input class="form-control me-4" type="search" placeholder="What do you need help with?" style="width: 350px;"
-                aria-label="Search">
-              <button class="btn btn-outline-secondary" type="submit">Find a volunteer</button>
-            </form>
-          </ul>
-          <ul class="navbar-nav mw-auto">
-            <li class="nav-item mw-5 me-2"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a></li>
-            <li class="nav-item me-2"><a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a></li>
-          </ul>
-          {% endif %}
+        {% if g.user %}
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link me-2" href="{{ url_for('dashboard.index') }}">Dashboard</a></li>
+        </ul>
+        <ul class="navbar-nav mw-auto">
+          <li class="nav-item mw-5">
+            <a class="nav-link" href="{{ url_for('dashboard.index') }}">{{ g.user['name'] }}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('dashboard.index') }}">
+              <img src="{{ url_for('static', filename='user-solid.svg') }}" alt="user_img" height="25px" width="25px"
+                style="border-radius: 50%; border: 1px solid grey; margin-right: 20px; padding: 2px;">
+            </a>
+          </li>
+          <li class="nav-item mw-5"><a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a></li>
+        </ul>
+        {% else %}
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <form class="d-flex" method="post" action="{{ url_for('search.find') }}">
+            <input class="form-control me-4" placeholder="What do you need help with?" style="width: 350px;" name="q">
+            <button class="btn btn-outline-secondary" type="submit">Find a volunteer</button>
+          </form>
+        </ul>
+        <ul class="navbar-nav mw-auto">
+          <li class="nav-item mw-5 me-2"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a></li>
+          <li class="nav-item me-2"><a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a></li>
+        </ul>
+        {% endif %}
       </div>
     </div>
   </nav>
