--- a/voluntron/templates/index.html
+++ b/voluntron/templates/index.html
@@ -2,8 +2,9 @@
 
 {% block header %}
 <div class="banner">
-  <div class="jumbotron jumbotron-banner container-sm my-4 px-3 py-3 text-light banner">
-    <h1 class="display-5">{% block title %}About Voluntron{% endblock %}</h1>
+  <div class="banner-img"></div>
+  <div class="jumbotron jumbotron-banner banner-content container-sm my-4 px-3 py-3 text-light banner">
+    <h1 class="display-5">{% block title %}Voluntron{% endblock %}</h1>
     <p class="fs-5 jumbotron-desc">Voluntron connects those in need to those with the means. No, we're not communists,
       but we believe in <a class="link-light" target="_blank" href="https://www.effectivealtruism.org/">effective
         altruism</a>, and the healing power of small contributions from those with privilege to those without.</p>
