Slightly nicer on mobile

--- a/voluntron/templates/base.html
+++ b/voluntron/templates/base.html
@@ -36,7 +36,7 @@
         </ul>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <form class="d-flex" method="post" action="{{ url_for('search.find') }}">
-            <input class="form-control me-3" placeholder="What do you need help with?" style="width: 300px;" name="q">
+            <input class="form-control me-3 query" placeholder="What do you need help with?" name="q">
             <button class="btn btn-outline-secondary" type="submit">Find a volunteer</button>
           </form>
         </ul>
